--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "tailwindcss": "^3.4.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
